# ebook-reader

./: Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/txt-novel-parser/: Cargo.toml
crates/txt-novel-parser/examples/: parse-author.rs  parse-desc.rs  parse-title.rs  parse.rs
crates/txt-novel-parser/src/: lib.rs
src/: App.vue  main.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  shared.rs
src/components/: close.vue  home-header.vue
src/router/: index.ts
src/views/: detail.vue  home.vue  settings.vue
